src/StateSmith/Input/PlantUML/antlr4/PlantUMLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from PlantUML.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class PlantUMLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, START_UML=20, END_UML=21, HWS=22, LINE_ENDER=23, IDENTIFIER=24, 
		DIGIT=25, BLOCK_COMMENT=26, LINE_COMMENT=27, SYMBOLS=28, SINGLE_QUOTE=29, 
		STRING=30, ENDNOTE=31;
	public const int
		RULE_line_ending_ows = 0, RULE_optional_any_space = 1, RULE_ohs = 2, RULE_start_end_state = 3, 
		RULE_state_id = 4, RULE_vertex = 5, RULE_edge = 6, RULE_transition_event_guard_code = 7, 
		RULE_transition = 8, RULE_state_child_states = 9, RULE_stereotype = 10, 
		RULE_state_explicit = 11, RULE_rest_of_line = 12, RULE_state_contents = 13, 
		RULE_ignore = 14, RULE_diagram_element = 15, RULE_note_short = 16, RULE_note_multiline_contents_line = 17, 
		RULE_note_multiline = 18, RULE_note_floating = 19, RULE_note = 20, RULE_startuml = 21, 
		RULE_diagram = 22, RULE_identifier = 23;
	public static readonly string[] ruleNames = {
		"line_ending_ows", "optional_any_space", "ohs", "start_end_state", "state_id", 
		"vertex", "edge", "transition_event_guard_code", "transition", "state_child_states", 
		"stereotype", "state_explicit", "rest_of_line", "state_contents", "ignore", 
		"diagram_element", "note_short", "note_multiline_contents_line", "note_multiline", 
		"note_floating", "note", "startuml", "diagram", "identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, "'[*]'", "'->'", "'-'", "'['", "']'", "':'", "'{'", "'}'", "'<<'", 
		"'>>'", "'state'", "'State'", "'as'", "'hide empty description'", "'scale'", 
		"'skinparam'", "'#'", "'note'", "'end'", "'@startuml'", "'@enduml'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "START_UML", "END_UML", 
		"HWS", "LINE_ENDER", "IDENTIFIER", "DIGIT", "BLOCK_COMMENT", "LINE_COMMENT", 
		"SYMBOLS", "SINGLE_QUOTE", "STRING", "ENDNOTE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PlantUML.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static PlantUMLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PlantUMLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PlantUMLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Line_ending_owsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Optional_any_spaceContext[] optional_any_space() {
			return GetRuleContexts<Optional_any_spaceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Optional_any_spaceContext optional_any_space(int i) {
			return GetRuleContext<Optional_any_spaceContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_ENDER() { return GetToken(PlantUMLParser.LINE_ENDER, 0); }
		public Line_ending_owsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line_ending_ows; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.EnterLine_ending_ows(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.ExitLine_ending_ows(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlantUMLVisitor<TResult> typedVisitor = visitor as IPlantUMLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine_ending_ows(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Line_ending_owsContext line_ending_ows() {
		Line_ending_owsContext _localctx = new Line_ending_owsContext(Context, State);
		EnterRule(_localctx, 0, RULE_line_ending_ows);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			optional_any_space();
			State = 49;
			Match(LINE_ENDER);
			State = 50;
			optional_any_space();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Optional_any_spaceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] HWS() { return GetTokens(PlantUMLParser.HWS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HWS(int i) {
			return GetToken(PlantUMLParser.HWS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LINE_ENDER() { return GetTokens(PlantUMLParser.LINE_ENDER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_ENDER(int i) {
			return GetToken(PlantUMLParser.LINE_ENDER, i);
		}
		public Optional_any_spaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optional_any_space; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.EnterOptional_any_space(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.ExitOptional_any_space(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlantUMLVisitor<TResult> typedVisitor = visitor as IPlantUMLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOptional_any_space(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Optional_any_spaceContext optional_any_space() {
		Optional_any_spaceContext _localctx = new Optional_any_spaceContext(Context, State);
		EnterRule(_localctx, 2, RULE_optional_any_space);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 52;
					_la = TokenStream.LA(1);
					if ( !(_la==HWS || _la==LINE_ENDER) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					} 
				}
				State = 57;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OhsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] HWS() { return GetTokens(PlantUMLParser.HWS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HWS(int i) {
			return GetToken(PlantUMLParser.HWS, i);
		}
		public OhsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ohs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.EnterOhs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.ExitOhs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlantUMLVisitor<TResult> typedVisitor = visitor as IPlantUMLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOhs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OhsContext ohs() {
		OhsContext _localctx = new OhsContext(Context, State);
		EnterRule(_localctx, 4, RULE_ohs);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 58;
					Match(HWS);
					}
					} 
				}
				State = 63;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_end_stateContext : ParserRuleContext {
		public Start_end_stateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_end_state; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.EnterStart_end_state(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.ExitStart_end_state(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlantUMLVisitor<TResult> typedVisitor = visitor as IPlantUMLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart_end_state(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Start_end_stateContext start_end_state() {
		Start_end_stateContext _localctx = new Start_end_stateContext(Context, State);
		EnterRule(_localctx, 6, RULE_start_end_state);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class State_idContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public State_idContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_state_id; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.EnterState_id(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.ExitState_id(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlantUMLVisitor<TResult> typedVisitor = visitor as IPlantUMLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitState_id(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public State_idContext state_id() {
		State_idContext _localctx = new State_idContext(Context, State);
		EnterRule(_localctx, 8, RULE_state_id);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VertexContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Start_end_stateContext start_end_state() {
			return GetRuleContext<Start_end_stateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public State_idContext state_id() {
			return GetRuleContext<State_idContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OhsContext ohs() {
			return GetRuleContext<OhsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StereotypeContext stereotype() {
			return GetRuleContext<StereotypeContext>(0);
		}
		public VertexContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vertex; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.EnterVertex(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.ExitVertex(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlantUMLVisitor<TResult> typedVisitor = visitor as IPlantUMLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVertex(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VertexContext vertex() {
		VertexContext _localctx = new VertexContext(Context, State);
		EnterRule(_localctx, 10, RULE_vertex);
		try {
			State = 75;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 68;
				start_end_state();
				}
				break;
			case T__10:
			case T__11:
			case T__12:
			case T__14:
			case T__15:
			case T__17:
			case T__18:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 69;
				state_id();
				State = 73;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
				case 1:
					{
					State = 70;
					ohs();
					State = 71;
					stereotype();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EdgeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(PlantUMLParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LINE_ENDER() { return GetTokens(PlantUMLParser.LINE_ENDER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_ENDER(int i) {
			return GetToken(PlantUMLParser.LINE_ENDER, i);
		}
		public EdgeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_edge; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.EnterEdge(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.ExitEdge(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlantUMLVisitor<TResult> typedVisitor = visitor as IPlantUMLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEdge(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EdgeContext edge() {
		EdgeContext _localctx = new EdgeContext(Context, State);
		EnterRule(_localctx, 12, RULE_edge);
		int _la;
		try {
			State = 93;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 77;
				Match(T__1);
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 78;
				Match(T__2);
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==IDENTIFIER) {
					{
					State = 79;
					Match(IDENTIFIER);
					}
				}

				State = 90;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__3) {
					{
					State = 82;
					Match(T__3);
					State = 86;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << START_UML) | (1L << END_UML) | (1L << HWS) | (1L << IDENTIFIER) | (1L << DIGIT) | (1L << BLOCK_COMMENT) | (1L << LINE_COMMENT) | (1L << SYMBOLS) | (1L << SINGLE_QUOTE) | (1L << STRING) | (1L << ENDNOTE))) != 0)) {
						{
						{
						State = 83;
						_la = TokenStream.LA(1);
						if ( _la <= 0 || ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << LINE_ENDER))) != 0)) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						}
						}
						State = 88;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					State = 89;
					Match(T__4);
					}
				}

				State = 92;
				Match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Transition_event_guard_codeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Rest_of_lineContext rest_of_line() {
			return GetRuleContext<Rest_of_lineContext>(0);
		}
		public Transition_event_guard_codeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_transition_event_guard_code; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.EnterTransition_event_guard_code(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.ExitTransition_event_guard_code(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlantUMLVisitor<TResult> typedVisitor = visitor as IPlantUMLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTransition_event_guard_code(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Transition_event_guard_codeContext transition_event_guard_code() {
		Transition_event_guard_codeContext _localctx = new Transition_event_guard_codeContext(Context, State);
		EnterRule(_localctx, 14, RULE_transition_event_guard_code);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			rest_of_line();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TransitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VertexContext[] vertex() {
			return GetRuleContexts<VertexContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VertexContext vertex(int i) {
			return GetRuleContext<VertexContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OhsContext[] ohs() {
			return GetRuleContexts<OhsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OhsContext ohs(int i) {
			return GetRuleContext<OhsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EdgeContext edge() {
			return GetRuleContext<EdgeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Transition_event_guard_codeContext transition_event_guard_code() {
			return GetRuleContext<Transition_event_guard_codeContext>(0);
		}
		public TransitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_transition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.EnterTransition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPlantUMLListener typedListener = listener as IPlantUMLListener;
			if (typedListener != null) typedListener.ExitTransition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlantUMLVisitor<TResult> typedVisitor = visitor as IPlantUMLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTransition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TransitionContext transition() {
		TransitionContext _localctx = new TransitionContext(Context, State);
		EnterRule(_localctx, 16, RULE_transition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			vertex();
			State = 98;
			ohs();
			State = 99;
			edge();
			State = 100;
			ohs();
			State = 101;
			vertex();
			State = 107;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				{
				State = 102;
				ohs();
				State = 103;
				Match(T__5);
				State = 104;
				ohs();
				State = 105;
				transition_event_guard_code();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
